# uv-subfolder

./: README.md  pyproject.toml
src/example_project/: __init__.py  __main__.py
src/subfolder_test/: subfolder_test.py
subfolder-test/: README.md
subfolder-test/another-subfolder/: README.md
subfolder-test/another-subfolder/src/subfolder_test/: __main__.py
subfolder-test/src/subfolder_test/: __init__.py
