[project]
name = "subfolder-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "“RonanMcGovern”", email = "78278410+RonanKMcGovern@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.3",
]

[project.scripts]
subfolder-test = "subfolder_test:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
